--- a/kube/ssl/values.yaml
+++ b/kube/ssl/values.yaml
@@ -1,3 +1,28 @@
 ---
 cert-manager:
-  value: none
+  # Cert-manager resources
+  resources:
+    limits:
+      cpu: 20m
+      memory: 64Mi
+    requests:
+      cpu: 20m
+      memory: 64Mi
+  # Webhook resources
+  webhook:
+    resources:
+      limits:
+        cpu: 50m
+        memory: 64Mi
+      requests:
+        cpu: 10m
+        memory: 64Mi
+  # CA Injector webhook
+  cainjector:
+    resources:
+      limits:
+        cpu: 20m
+        memory: 64Mi
+      requests:
+        cpu: 20m
+        memory: 64Mi
