Upgrade charts to Helm3, k8s to 1.24
Also:
- Fix API Versions removed in 1.22
- Upgrade cert-manager
- Upgrade nginx ingress controller

--- a/kube/web/Chart.yaml
+++ b/kube/web/Chart.yaml
@@ -1,2 +1,8 @@
+---
+apiVersion: v2
 name: web
 version: 1.0.0
+dependencies:
+- name: ingress-nginx
+  version: 4.2.5
+  repository: "@ingress-nginx"
